# deku

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
adapters/: Cargo.toml
adapters/ethereum/: Cargo.toml
adapters/ethereum/src/: lib.rs
adapters/solana/: Cargo.toml
adapters/solana/src/: lib.rs
adapters/src/: lib.rs
adapters/substrate/: Cargo.toml
adapters/substrate/src/: lib.rs
core/: Cargo.toml
core/src/: main.rs  rpc.rs
networks/: Cargo.toml
networks/src/: ethereum.rs  lib.rs  solana.rs  substrate.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: constants.rs  lib.rs  mock.rs  rpc.rs
sdk/src/chain/: mod.rs  rpc.rs
server/: Cargo.toml
server/src/: main.rs
