[workspace.package]
authors = [ "Tin Chung <cqtin0903@gmail.com>" ]
description = "DEKY Unknown"
edition = "2021"
license = "Unlicense"

[workspace]
members = [
	"adapters/ethereum",
	"adapters/solana",
	"adapters/substrate",
	"core",
	"primitives",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false }
spandoc = "0.2.2"
tokio = { version = "1.36", features = [ "macros", "rt-multi-thread", "time" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", default-features = false }

# Ethereum
alloy = { version = "0.7" }

# Solana
solana-client = { version = "2.1.5", default-features = false }

# Substrate
subxt = { version = "0.38.0" }


# Local dependencies
deku-adapter-ethereum = { path = "adapters/ethereum", default-features = false }
deku-adapter-solana = { path = "adapters/solana", default-features = false }
deku-adapter-substrate = { path = "adapters/substrate", default-features = false }
deku-primitives = { path = "primitives", default-features = false }
