[workspace.package]
authors = [ "Tin Chung <cqtin0903@gmail.com>" ]
description = "DEKY Unknown"
edition = "2021"
license = "Unlicense"

[workspace]
members = [
	"adapters",
	"adapters/ethereum",
	"adapters/solana",
	"adapters/substrate",
	"networks",
	"primitives",
	"sdk",
	"server",
]
resolver = "2"

[workspace.dependencies]
# Common dependencies
enum-iterator = "2.1.0"
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false }
ruint = "1.12.3"
tokio = { version = "1.36", features = [ "macros", "rt-multi-thread", "time" ] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", default-features = false }

# Ethereum
alloy = { version = "0.7" }

# Solana
solana-client = { version = "2.1.5", default-features = false }
solana-sdk = { version = "2.1.5", default-features = false }
solana-signature = { version = "2.1.5", default-features = false }
solana-transaction-status = { version = "2.1.5", default-features = false }

# Substrate
subxt = { version = "0.38.0" }

# Local dependencies
deku-adapter-ethereum = { path = "adapters/ethereum", default-features = false }
deku-adapter-solana = { path = "adapters/solana", default-features = false }
deku-adapter-substrate = { path = "adapters/substrate", default-features = false }
deku-adapters = { path = "adapters", default-features = false }
deku-networks = { path = "networks", default-features = false }
deku-primitives = { path = "primitives", default-features = false }
deku-sdk = { path = "sdk", default-features = false }
