[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "deku-adapters"
version = "0.1.0"

[dependencies]
deku-adapter-ethereum.workspace = true
deku-adapter-solana.workspace = true
deku-adapter-substrate.workspace = true

[features]
default = [  ]
std = [
	"deku-adapter-ethereum/std",
	"deku-adapter-solana/std",
	"deku-adapter-substrate/std",
]
