[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "chainsmith-adapters"
version = "0.1.0"

[dependencies]
chainsmith-adapter-ethereum.workspace = true
chainsmith-adapter-solana.workspace = true
chainsmith-adapter-substrate.workspace = true

[features]
default = [  ]
std = [
	"chainsmith-adapter-ethereum/std",
	"chainsmith-adapter-solana/std",
	"chainsmith-adapter-substrate/std",
]
