[package]
edition = "2021"
name = "deku-core"
version = "0.1.0"

[dependencies]
eyre.workspace = true
futures.workspace = true
spandoc.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = [
	"env-filter",
	"fmt",
	"std",
] }

# Local dependencies
deku-adapter-ethereum.workspace = true
deku-adapter-solana.workspace = true
deku-adapter-substrate.workspace = true
deku-primitives.workspace = true

[features]
default = [ "std" ]
std = [
	"deku-adapter-ethereum/std",
	"deku-adapter-solana/std",
	"deku-adapter-substrate/std",
	"futures/std",
]
