[package]
name = "chainsmith-networks"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alloy.workspace = true
chainsmith-primitives.workspace = true
solana-transaction-status.workspace = true
solana-signature.workspace = true