[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "deku-sdk"
version = "0.1.0"

[dependencies]
enum-iterator.workspace = true
eyre.workspace = true
futures.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = [
	"env-filter",
	"fmt",
	"std",
] }
tracing.workspace = true

# Local dependencies
deku-adapters.workspace = true
deku-networks.workspace = true
deku-primitives.workspace = true

[features]
default = [ "std" ]
std = [
	"deku-adapters/std",
	"futures/std",
]
