[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "chainsmith-sdk"
version = "0.1.0"

[dependencies]
enum-iterator.workspace = true
eyre.workspace = true
futures.workspace = true
tokio.workspace = true
tracing-subscriber = { workspace = true, features = [
	"env-filter",
	"fmt",
	"std",
] }
tracing.workspace = true

# Local dependencies
chainsmith-adapters.workspace = true
chainsmith-networks.workspace = true
chainsmith-primitives.workspace = true

[features]
default = [ "std" ]
std = [
	"chainsmith-adapters/std",
	"futures/std",
]
