[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "deku-adapter-ethereum"
version = "0.1.0"

[dependencies]
alloy.workspace = true
eyre.workspace = true
futures = { workspace = true, default-features = false }
tokio.workspace = true

# Local dependencies
deku-primitives.workspace = true

[features]
default = [ "std" ]
std = [ "alloy/full", "futures/std" ]
