[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "deku-adapter-solana"
version = "0.1.0"

[dependencies]
eyre.workspace = true
futures = { workspace = true, default-features = false }
solana-client.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }

deku-primitives.workspace = true

[features]
default = [  ]
std = [ "futures/std" ]
