[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "chainsmith-adapter-solana"
version = "0.1.0"

[dependencies]
eyre.workspace = true
futures = { workspace = true, default-features = false }
solana-client.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread" ] }
tracing.workspace = true

# Local dependencies
chainsmith-networks.workspace = true
chainsmith-primitives.workspace = true

[features]
default = [  ]
std = [ "futures/std" ]
