[package]
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
name = "chainsmith-adapter-substrate"
version = "0.1.0"

[dependencies]
eyre.workspace = true
futures = { workspace = true, default-features = false }
tokio.workspace = true
tracing-subscriber = { workspace = true, features = [ "env-filter" ] }
tracing.workspace = true

subxt = { workspace = true, features = [ "unstable-light-client" ] }

# Local dependencies
chainsmith-networks.workspace = true
chainsmith-primitives.workspace = true

[features]
default = [ "std" ]
std = [ "futures/std" ]
